package com.coderme.design.strategy.headfirst;


/**
 * 飞行的行为
 */
public interface FlyBehavior {

    void fly();


}
