package com.coderme.design.strategy.headfirst;

/**
 * 叫声行为
 */
public interface QuackBehavior {

    void quack();

}
